Results of three examples and first observations:
Three examples were investigated for the edge-length ratio. The results of the first optimizations and observations are noted down.

--- a/main.tex
+++ b/main.tex
@@ -38,6 +38,7 @@
 \newtheorem{remark}{Remark}
 \newtheorem{definition}{Definition}
 \newtheorem{corollary}{Corollary}
+\newtheorem{observation}{Observation}
 \newcommand{\comment}[1]
 {
 	\begin{quotation}
@@ -86,9 +87,10 @@
 \displaywidowpenalty = 10000
 
 \begin{document}
-\include{title.tex}
-\include{intro.tex}
-\include{preliminaries.tex}
+%\include{title.tex}
+%\include{intro.tex}
+%\include{preliminaries.tex}
 \include{symposium.tex}
-\include{2021-03-25_report.tex}
+% \include{2021-03-25_report.tex}
+\include{Previous results.tex}
 \end{document}
